--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -293,15 +293,15 @@
             </div>
             <div class="product-card">
                 <a href="kids_product2.html">
-                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/ba14eb8bc02f4013b47932f27fa619c2_9366/Essentials_Allover_Print_Jogger_Set_Kids_Blue_IW1002_01_laydown.jpg" alt="Essentials Allover Prnt Jogger Set">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" alt="Essentials Allover Prnt Jogger Set">
                     <h3>Essentials Allover Print Jogger Set</h3>
                 </a>
                 <p>₹1,299</p>
             </div>
             <div class="product-card">
                 <a href="kids_product3.html">
-                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/d85bb8c107ff4bca8b312bbe1e11e376_9366/Disney_Mickey_Mouse_Tee_Set_Orange_IV9648_03_laydown_hover.jpg" alt="Disney Mickey Mouse Tee Set">
-                    <h3>Disney Mickey Mouse Tee Set</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f69e7da5-6d32-47f4-b4e3-18f17f51bbe0/LFC+Y+NK+DF+JSY+SS+STAD+AW.png" alt="Disney Mickey Mouse Tee Set">
+                    <h3>Nike Dri-FIT Football Replica Shirt</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
@@ -315,7 +315,7 @@
             <div class="product-card">
                 <a href="kids_product5.html">
                     <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/a99f066d781a463e934f394c4833ad4e_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_25_model.jpg" alt="Marvel Spider-Man T-Shirt">
-                    <h3>Marvel Spider-Man T-Shirt</h3>
+                    <h3>Girls' Dri-FIT Short-Sleeve Top</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
