--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -314,7 +314,7 @@
             </div>
             <div class="product-card">
                 <a href="kids_product5.html">
-                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/a99f066d781a463e934f394c4833ad4e_9366/ADIDAS_MARVEL_SPIDER-MAN_T-SHIRT_Red_JF3654_25_model.jpg" alt="Marvel Spider-Man T-Shirt">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/633fae47-d535-4956-8196-18f107c03601/G+NK+DF+ONE+STD+SS+TOP+HBR.png" alt="Marvel Spider-Man T-Shirt">
                     <h3>Girls' Dri-FIT Short-Sleeve Top</h3>
                 </a>
                 <p>₹1,499</p>
