--- a/men_product3.html
+++ b/men_product3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inter Milan 2024/25 Stadium Home Jersey</title>
+  <title>Nike performance tee</title>
   <style>
     html,body {
             margin: 0;
@@ -304,11 +304,10 @@
             background-color: #000;
         }
 
-
-
+    
   </style>
 </head>
-<body>
+<body style="background-color: white;">
   <div class="header">
         <div class="header-left">
             <div class="logo">
@@ -334,6 +333,7 @@
             </div>
         </div>
     </div>
+  
   <div class="container">
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
 
@@ -349,7 +349,7 @@
       </div>
 
       <div class="product-details">
-        <h1>nter Milan 2024/25 Stadium Home Jersey</h1>
+        <h1>Inter Milan 2024/25 Stadium Home Jersey</h1>
         <h2> ₹3,799</h2>
 
         <p><strong>Description:</strong> Celebrate Inter Milan's historic 20th Serie A title with the 2024/25 Stadium Home Jersey—a bold fusion of tradition and innovation.</p>
@@ -366,16 +366,18 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Arsenal UBP Tee data-price="3799">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="001" data-name="Nike performance tee" data-price="1495.00">
   		        Add to Bag
 	        </button>
         </div>
+
+        
       </div>
     </div>
   </div>
 
   <footer>
-      <div class="promo-banner">
+        <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
             <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
 
@@ -427,6 +429,7 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
+
   <script src ="auth.js">
   </script>
 </body>
