--- a/cart.html
+++ b/cart.html
@@ -307,6 +307,8 @@
             background-color: #000;
         }
 </style>
+  <link rel="icon" href="fav.jpeg" type="image/jpeg">
+
 </head>
 <body style="background-color: white;">
   <div class="header">
@@ -366,7 +368,8 @@
 <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
+
         </div>
         <div class="footer-content">
             <div class="footer-column">
