--- a/men_product3.html
+++ b/men_product3.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nike performance tee</title>
+  <title>Inter Milan 2024/25 Stadium Home Jersey</title>
   <style>
     html,body {
             margin: 0;
@@ -366,7 +366,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="001" data-name="Nike performance tee" data-price="1495.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="003" data-name="Inter Milan 2024/25 Stadium Home Jersey" data-price="3799.00">
   		        Add to Bag
 	        </button>
         </div>
