--- a/orders.html
+++ b/orders.html
@@ -307,6 +307,7 @@
             background-color: #000;
         }
 </style>
+  <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 <body style="background-color: white;">
   <div class="header">
