--- a/return.html
+++ b/return.html
@@ -47,6 +47,7 @@
             margin-top: 60px;
         }
     </style>
+    <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 <body>
    <div class="header">
