--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -249,6 +249,7 @@
             background-color: #000;
         }
     </style>
+    <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 
 <body>
