--- a/shoes_product4.html
+++ b/shoes_product4.html
@@ -306,6 +306,7 @@
 
     
   </style>
+	<link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
 <body style="background-color: white;">
  <div class="header">
