--- a/men_product7.html
+++ b/men_product7.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nike Pro Fitness Top</title>
   <style>
-     html,body {
+    html,body {
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #000;
@@ -304,9 +304,10 @@
             background-color: #000;
         }
 
+    
   </style>
 </head>
-<body>
+<body style="background-color: white;">
   <div class="header">
         <div class="header-left">
             <div class="logo">
@@ -332,7 +333,7 @@
             </div>
         </div>
     </div>
-
+  
   <div class="container">
     <button class="back-btn" onclick="history.back()">← Back to Catalogue</button>
 
@@ -426,6 +427,7 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
+
   <script src ="auth.js">
   </script>
 </body>
