--- a/kids_product2.html
+++ b/kids_product2.html
@@ -342,7 +342,7 @@
         <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src=https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/64ff2848-6ccf-4361-b314-e7ddef820340/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/7f123e9c-650e-4fb3-b1f2-6e2c6822d1ae/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/762a7356-7b59-4331-bf55-a097b3e3c981/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
           <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/a06b00da-82d6-4a8a-a6e4-eed7916a880b/B+NK+DF+SS+MILER+TOP.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
