--- a/login&signup.html
+++ b/login&signup.html
@@ -177,6 +177,121 @@
             width: 30px;
             object-fit: contain;
         }
+	.center-wrapper {
+  		min-height: 80vh;
+  		display: flex;
+  		justify-content: center;
+  		align-items: center;
+		background-image: url('mad.jpg'); /* <-- your image path */
+  		background-size: cover;                /* Cover the whole area */
+  		background-position: center;           /* Center the image */
+ 		 background-repeat: no-repeat; 
+	}
+.promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+    footer {
+            background-color: #000;
+            text-align: center;
+        }
+
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc;
+        }
+
+        .footer-column {
+            width: 15%;
+            color: #ccc;
+        }
+
+        .footer-column h3 {
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .footer-column ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-column ul li {
+            font-size: 13px;
+            margin-bottom: 8px;
+            cursor: pointer;
+        }
+
+        .footer-column ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-column.social {
+            text-align: left;
+        }
+
+        .footer-column.social a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column.social a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-bottom {
+            background-color: #1a1a1a;
+            padding: 15px 0;
+            font-size: 12px;
+            color: #ccc;
+        }
+
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            height: 40px;
+            width: auto;
+        }
+
+        .icons img {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
+        }
+
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
   </style>
 </head>
 <body>
@@ -206,6 +321,7 @@
         </div>
     </div>
 
+  <div class="center-wrapper">
   <div class="container" id="signup-form">
     <h2>Sign Up</h2>
     <input type="text" id="signup-name" placeholder="Full Name" required>
@@ -222,12 +338,10 @@
     <button onclick="logIn()">Log In</button>
     <div class="toggle-link" onclick="toggleForms()">Don't have an account? Sign Up</div>
   </div>
+</div>
+<script src="auth.js"></script>
 <footer>
-        <div class="promo-banner">
-            <p>JOIN Athletix AND GET 10% OFF</p>
-            <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
 
-        </div>
         <div class="footer-content">
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
@@ -275,7 +389,7 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
-<script src="auth.js"></script>
 
 </body>
+
 </html>
