--- a/help.html
+++ b/help.html
@@ -61,6 +61,24 @@
             color: #F7E146;
             text-decoration: underline;
         }
+        .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
 </head>
