--- a/homepage.html
+++ b/homepage.html
@@ -262,7 +262,7 @@
     <div class="main-content">
         <div class="text-content">
             <h1>SUPERSTAR</h1>
-            <p>A streetwear staple, from the basketball court to the street.</p>
+            <p>A streetwear staple, from the home court to the street.</p>
             <a href="basketball_athletix.html">Shop NBA</a>
             <a href="football_athletix.html">Shop FIFA</a>
             <a href="cricket_athletix.html">Shop ICC</a>
