--- a/cricket_athletix.html
+++ b/cricket_athletix.html
@@ -303,7 +303,7 @@
             <div class="product-card">
                 <a href="cricket_product3.html">
                     <img src="https://contents.mediadecathlon.com/p2614804/3e8033a6b28c1b22576d429bbe2da281/p2614804.jpg?format=auto&quality=70&f=768x0" alt="Casual Shoes">
-                    <h3>Adult Plain Jersey(Dhoni edition)</h3>
+                    <h3>Adult Full Sleeve Cricket Polo</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
