--- a/help.html
+++ b/help.html
@@ -61,23 +61,83 @@
             color: #F7E146;
             text-decoration: underline;
         }
-        .promo-banner {
-            background-color: #F7E146;
-            color: #000;
-            padding: 20px 0;
-            font-size: 18px;
-            font-weight: bold;
+        footer {
+            background-color: #000;
             text-align: center;
         }
 
-        .promo-banner button {
-            background-color: #000;
-            color: #fff;
-            border: 2px solid #000;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 16px;
+        .footer-content {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 10%;
+            text-align: left;
+            flex-wrap: wrap;
+            color: #ccc;
+        }
+
+        .footer-column {
+            width: 15%;
+            color: #ccc;
+        }
+
+        .footer-column h3 {
+            font-size: 14px;
             font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .footer-column ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-column ul li {
+            font-size: 13px;
+            margin-bottom: 8px;
+            cursor: pointer;
+        }
+
+        .footer-column ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-column.social {
+            text-align: left;
+        }
+
+        .footer-column.social a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column.social a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-bottom {
+            background-color: #1a1a1a;
+            padding: 15px 0;
+            font-size: 12px;
+            color: #ccc;
+        }
+
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            height: 40px;
+            width: auto;
+        }
+
+        .icons img {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
         }
     </style>
     <link rel="icon" href="fav.jpeg" type="image/jpeg">
