--- a/cricket_product1.html
+++ b/cricket_product1.html
@@ -341,18 +341,18 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod01/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p1999086/3b750c1b7fb41e622b887f8241b1041c/p1999086.jpg?format=auto&quality=70&f=768x0" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod01/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod03/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod04/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod09/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p1999086/3b750c1b7fb41e622b887f8241b1041c/p1999086.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p1999085/2838afa184fb20efad34636470e7f8bf/p1999085.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p1999083/98c14618214008a3c89dff279b094820/p1999083.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2012956/5a3e073f9221c631bc8e91b11836579b/p2012956.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>PUMA RCB Cricket Jersey</h1>
+        <h1>Men Cricket Polo Breathable Short Sleeve</h1>
         <h2>₹4999.99</h2>
 
         <p><strong>Description:</strong> Show your bold loyalty with the Puma RCB Cricket Jersey—crafted for comfort, built for performance, and styled for fans who bleed red and gold with every run, wicket, and roar.
@@ -371,7 +371,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="601" data-name="PUMA RCB Cricket Jersey" data-price="4999.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="601" data-name="Men Cricket Polo Breathable Short Sleeve" data-price="4999.99">
   		        Add to Bag
 	        </button>
         </div>
