--- a/cricket_product2.html
+++ b/cricket_product2.html
@@ -341,21 +341,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv01/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2249100/89cac79c153398a127c23ce0b2023e6b/p2249100.jpg?format=auto&quality=70&f=768x0" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv01/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv02/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv04/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/bv/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2249100/89cac79c153398a127c23ce0b2023e6b/p2249100.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2783951/e722720fd1158e771801b774487babf8/p2783951.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2783804/006adab00d75ef2febfd6066bf2498a1/p2783804.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2783797/e1f13706b2ba1ef5dec2187f6a9ecca3/p2783797.jpg?format=auto&quality=70&f=768x0" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>PUMA '24 FH Rubber Cricket Shoes</h1>
+        <h1>Adult Cricket Shoe CS 500</h1>
         <h2>₹5949.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Engineered for performance and comfort, the CS 500 Adult Cricket Shoe is perfect for intermediate to advanced players. It features a lightweight yet durable design, offering superior grip and stability on the field.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -370,7 +370,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="602" data-name="PUMA '24 FH Rubber Cricket Shoes" data-price="5949.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="602" data-name="Adult Cricket Shoe CS 500" data-price="5949.99">
   		        Add to Bag
 	        </button>
         </div>
