--- a/cricket_product1.html
+++ b/cricket_product1.html
@@ -355,7 +355,7 @@
         <h1>Men Cricket Polo Breathable Short Sleeve</h1>
         <h2>₹4999.99</h2>
 
-        <p><strong>Description:</strong> Show your bold loyalty with the Puma RCB Cricket Jersey—crafted for comfort, built for performance, and styled for fans who bleed red and gold with every run, wicket, and roar.
+        <p><strong>Description:</strong> Engineered for performance and comfort, the Men's Breathable Short Sleeve Cricket Polo is perfect for intense training and match play.
 </p>
 
         <div class="size-selector">
