--- a/cricket_product3.html
+++ b/cricket_product3.html
@@ -355,7 +355,7 @@
         <h1>Adult Full Sleeve Cricket Polo</h1>
         <h2>₹999.99</h2>
 
-        <p><strong>Description: Stay comfortable and focused on the pitch with the Adult Full Sleeve Cricket Polo. Made from lightweight, breathable fabric, this polo offers excellent moisture-wicking to keep you dry during long matches. </strong> 
+        <p><strong>Description: </strong> Stay comfortable and focused on the pitch with the Adult Full Sleeve Cricket Polo. Made from lightweight, breathable fabric, this polo offers excellent moisture-wicking to keep you dry during long matches.  
 </p>
 
         <div class="size-selector">
