--- a/login&signup.html
+++ b/login&signup.html
@@ -182,9 +182,9 @@
   		display: flex;
   		justify-content: center;
   		align-items: center;
-		background-image: url('mad.jpg'); /* <-- your image path */
-  		background-size: cover;                /* Cover the whole area */
-  		background-position: center;           /* Center the image */
+		background-image: url('mad.jpg'); 
+  		background-size: cover;            
+  		background-position: center;          
  		 background-repeat: no-repeat; 
 	}
 .promo-banner {
