--- a/entity.html
+++ b/entity.html
@@ -43,7 +43,25 @@
             border-radius: 6px;
             border-left: 5px solid #00cec9;
         }
+        .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
 
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
+        
         footer {
             background-color: #000;
             text-align: center;
