--- a/return.html
+++ b/return.html
@@ -42,6 +42,24 @@
             border-left: 5px solid #00b894;
             border-radius: 5px;
         }
+        .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
 
         footer {
             background-color: #000;
