--- a/shipping.html
+++ b/shipping.html
@@ -43,6 +43,24 @@
             border-radius: 5px;
             margin-bottom: 30px;
         }
+        .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }        
 
         footer {
             background-color: #000;
