--- a/cricket_athletix.html
+++ b/cricket_athletix.html
@@ -353,7 +353,7 @@
     </div>
 
     <footer>
-        <<div class="promo-banner">
+        <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
             <button onclick="window.location.href='https://ryanatrix.github.io/UID/login&signup.html'">Sign Up for Free →</button>
 
@@ -381,17 +381,17 @@
             <div class="footer-column">
                 <h3>SUPPORT</h3>
                 <ul>
-                    <li><a href="/help">Help</a></li>
-                    <li><a href="/customer-service">Customer Service</a></li>
-                    <li><a href="/returns">Returns & Exchanges</a></li>
-                    <li><a href="/shipping">Shipping</a></li>
+                    <li><a href="help.html">Help</a></li>
+                    <li><a href="customer.html">Customer Service</a></li>
+                    <li><a href="return.html">Returns & Exchanges</a></li>
+                    <li><a href="shipping.html">Shipping</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>COMPANY INFO</h3>
                 <ul>
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="/entity-details">Entity Details</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="entity.html">Entity Details</a></li>
                 </ul>
             </div>
             <div class="footer-column social">
