--- a/help.html
+++ b/help.html
@@ -62,6 +62,24 @@
             text-decoration: underline;
         }
         footer {
+            .promo-banner {
+            background-color: #F7E146;
+            color: #000;
+            padding: 20px 0;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .promo-banner button {
+            background-color: #000;
+            color: #fff;
+            border: 2px solid #000;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+        }
             background-color: #000;
             text-align: center;
         }
