--- a/return.html
+++ b/return.html
@@ -5,6 +5,55 @@
     <link rel="stylesheet" href="main.css">
     <style>
         body {
+            .header {
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .header-left {
+            display: flex;
+            align-items: center;
+            gap: 550px;
+        }
+
+        .logo img {
+            height: 30px;
+        }
+
+        .nav-menu {
+            display: flex;
+            gap: 25px;
+            font-size: 1.3em;
+            align-items: center;
+        }
+
+        .nav-menu a {
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+            align-items: center;
+        }
+
+        .help-signup {
+            display: flex;
+            gap: 20px;
+            font-size: 1.3em;
+        }
+
+        .help-signup a {
+            text-decoration: none;
+            color: #ffffff;
+        }
+
+        .help-signup a:hover {
+            text-decoration: underline;
+        }
+
             font-family: Arial, sans-serif;
         }
 
@@ -35,13 +84,7 @@
             margin-left: 20px;
         }
 
-        .policy-section {
-            margin-bottom: 40px;
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-left: 5px solid #00b894;
-            border-radius: 5px;
-        }
+        
        
         footer {
             .promo-banner {
