--- a/return.html
+++ b/return.html
@@ -124,6 +124,13 @@
             list-style-type: disc;
             margin-left: 20px;
         }
+        .policy-section {
+            margin-bottom: 40px;
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-left: 5px solid #00b894;
+            border-radius: 5px;
+        }
 
         
        
